[package]
name = "app-installation-detection"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra = "0.10.1"
command.workspace = true
tokio = { version = "1.37", features = ["full"] }
nix.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp_cli.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
win32job = "2.0.1"
