[package]
name = "asset_cache"
version = "0.0.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-compat.workspace = true
async-fs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
futures.workspace = true
log.workspace = true
reqwest.workspace = true
url.workspace = true
warpui_core.workspace = true
