[package]
name = "cloud_object_client"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
chrono.workspace = true
cloud_object_models.workspace = true
cloud_objects.workspace = true
mockall = { version = "0.13.1", optional = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
warp_core.workspace = true
warp_graphql.workspace = true

[features]
test-util = ["dep:mockall", "cloud_object_models/test-util", "cloud_objects/test-util"]

