[package]
name = "cloud_object_models"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[features]
agent_mode_evals = []
test-util = ["cloud_objects/test-util"]

[dependencies]
ai.workspace = true
anyhow.workspace = true
chrono.workspace = true
cfg-if.workspace = true
cloud_objects.workspace = true
handlebars.workspace = true
lazy_static.workspace = true
log.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_regex = "1.1.0"
session-sharing-protocol.workspace = true
settings.workspace = true
settings_value = { workspace = true, features = ["derive"] }
uuid.workspace = true
warp-workflows.workspace = true
warp_cli.workspace = true
warp_core.workspace = true
warp_graphql.workspace = true
warp_util.workspace = true

[dev-dependencies]
cloud_objects = { workspace = true, features = ["test-util"] }
