[package]
name = "cloud_objects"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[features]
test-util = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cynic.workspace = true
derivative.workspace = true
itertools.workspace = true
lasso.workspace = true
pathfinder_geometry.workspace = true
schemars = { version = "1", features = ["uuid1"] }
serde.workspace = true
settings_value.workspace = true
session-sharing-protocol.workspace = true
thiserror.workspace = true
uuid.workspace = true
warp_core.workspace = true
warp_graphql.workspace = true
warpui_core.workspace = true
