# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "doppler_mcp"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "MCP server exposing Doppler project/config/secret-name metadata — never raw values."

[[bin]]
name = "doppler-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
doppler.workspace = true
rmcp = { workspace = true, features = ["server", "transport-io"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "sync"] }
